# Social-Media-Agent-With-Engagement-Rival-Analysis-

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py
backend/app/agents/: base_agent.py  creative_agent.py  orchestrator.py  qa_agent.py  strategy_agent.py
backend/app/data/: kafi_products.json
backend/app/database/: db.py  models.py
backend/app/llm/: ollama_client.py
backend/app/middleware/: cors.py  dashboard_auth.py  error_handler.py
backend/app/routes/: analytics.py  approval.py  auth.py  calendar.py  content.py  creation.py  health.py  meta_auth.py  qa.py  rival.py  scraper.py  social.py  youtube_auth.py
backend/app/schemas/: calendar.py  content.py  creation.py  rival.py
backend/app/scrapers/: base_scraper.py
backend/app/services/: auth_service.py  calendar.py  content.py  image_generation.py  media.py  product_knowledge.py  publishing.py  rival_collectors.py  rival_insights.py  rival_service.py  scheduler.py  social_analytics.py  social_publisher.py
backend/scripts/: check_linkedin_env.py  diagnose_linkedin.py  fix_poststatus_enum.py  inspect_enums.py  lookup_linkedin_organizations.py  migrate_add_youtube_columns.py  migrate_calendar.py  migrate_linkedin_multi_account.py  reset_db.py  setup_db.py  test_facebook_instagram_post.py  test_linkedin_post.py  test_linkedin_workflow.py  test_ollama.py  test_youtube_post.py  verify_social_accounts.py
(+52 files in other folders)
