[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafi-social-agent"
version = "0.1.0"
description = "AI Agent System for B2B/B2C Agricultural Export Corporation"
requires-python = ">=3.10"
authors = [
    { name = "Kafi Commodities Development Team" }
]
license = { text = "MIT" }
keywords = ["ai", "agent", "social-media", "content-generation", "agriculture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://kafi-group.com"
Repository = "https://github.com/your-org/kafi-social-agent"
Documentation = "https://github.com/your-org/kafi-social-agent/wiki"
